Bug 577450.  Replicated fixed-pos frames should have the right style.  r=roc, a=roc